--- a/privacy-breakwall.html
+++ b/privacy-breakwall.html
@@ -1,120 +1,142 @@
-🌍 Privacy Policy (English Version)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Privacy Policy - 우당탕탕 벽뿌셔</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+            line-height: 1.6;
+            background: #fafafa;
+            color: #222;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        .section {
+            margin-bottom: 24px;
+        }
+        .top-title {
+            font-size: 28px;
+            font-weight: bold;
+            margin-bottom: 12px;
+        }
+        .subtitle {
+            font-size: 16px;
+            color: #666;
+            margin-bottom: 30px;
+        }
+        ul {
+            margin: 10px 0 10px 20px;
+        }
+        .footer {
+            margin-top: 40px;
+            font-size: 14px;
+            color: #666;
+            border-top: 1px solid #ddd;
+            padding-top: 20px;
+        }
+    </style>
+</head>
+<body>
 
-for “우당탕탕 벽뿌셔” (com.copiasoft.breakwall)
-Developer: Copiasoft
+    <div class="top-title">Privacy Policy for “우당탕탕 벽뿌셔”</div>
+    <div class="subtitle">Package Name: <b>com.copiasoft.breakwall</b> &nbsp; | &nbsp; Developer: <b>Copiasoft</b></div>
 
-Last Updated: [insert date]
+    <div class="section">
+        <h2>1. Introduction</h2>
+        <p>
+            This Privacy Policy explains how Copiasoft (“we”, “our”, “us”) collects, uses, and protects information when users access or play the mobile game 
+            <b>“우당탕탕 벽뿌셔”</b> (the App).
+        </p>
+    </div>
 
-Copiasoft (“Developer,” “we,” “our,” or “us”) provides the mobile game “우당탕탕 벽뿌셔” (“the App”, package name: com.copiasoft.breakwall).
-This Privacy Policy explains how the App collects, uses, and protects user information.
+    <div class="section">
+        <h2>2. Information We Collect</h2>
+        <p>We do <b>not</b> collect personally identifiable information such as name, phone number, address, or email.  
+        The App may collect the following non-personal and service-related data:</p>
+        <ul>
+            <li><b>Gameplay Data</b>: stage progress, destroyed walls count, score, in-game currency, items.</li>
+            <li><b>Purchase Information</b>: product ID, purchase status, purchase tokens from Google Play Billing (no credit card data is stored).</li>
+            <li><b>Device & Technical Data</b>: device model, OS version, app version, country/language settings, crash logs.</li>
+            <li><b>Advertising Identifier (ADID)</b> for ad personalization or measurement (depending on device settings).</li>
+        </ul>
+    </div>
 
-By installing or using the App, you agree to the terms of this Privacy Policy.
+    <div class="section">
+        <h2>3. How We Use the Information</h2>
+        <ul>
+            <li>Providing and maintaining the game service</li>
+            <li>Saving progress and managing cloud data</li>
+            <li>Processing and verifying in-app purchases</li>
+            <li>Analytics for gameplay improvement and balancing</li>
+            <li>Error tracking and performance enhancement</li>
+            <li>Advertising display and measurement</li>
+        </ul>
+    </div>
 
-1. Information We Collect
+    <div class="section">
+        <h2>4. Third-Party Services</h2>
+        <p>The App uses the following services, which may collect data under their own policies:</p>
+        <ul>
+            <li><b>Google AdMob</b> – Advertising services</li>
+            <li><b>PlayFab</b> – Backend, account, and game data storage</li>
+            <li><b>Unity Analytics</b> – Usage analytics & performance tracking</li>
+        </ul>
+    </div>
 
-We do not collect personally identifiable information such as your real name, phone number, address, or email.
-The App may collect the following types of data:
+    <div class="section">
+        <h2>5. Data Retention</h2>
+        <p>
+            Gameplay and purchase data are stored as long as required to operate the service.  
+            If a user requests deletion, the data will be removed unless retention is required by law.
+        </p>
+    </div>
 
-1) Gameplay Data
+    <div class="section">
+        <h2>6. Data Deletion Requests</h2>
+        <p>
+            Users may request deletion of their game data at any time by contacting:
+        </p>
+        <p><b>Email:</b> copiasoft21@gmail.com</p>
+        <p>
+            Please include your Player ID or in-game nickname for verification.  
+            We will delete the requested data and notify you once completed.
+        </p>
+    </div>
 
-Stage progress, score, number of destroyed walls
+    <div class="section">
+        <h2>7. Children’s Privacy</h2>
+        <p>
+            This App is not intended for children under 14.  
+            If we become aware that data was collected from a child, it will be deleted immediately.
+        </p>
+    </div>
 
-In-game currency balance, items, and user behavior related to gameplay
+    <div class="section">
+        <h2>8. Security</h2>
+        <p>
+            We take reasonable steps to protect user data; however, no system can guarantee complete security.
+        </p>
+    </div>
 
-2) Purchase Information
+    <div class="section">
+        <h2>9. Changes to This Policy</h2>
+        <p>
+            The policy may be updated due to legal or service changes. Updates will be posted on this page.
+        </p>
+        <p><b>Last Updated:</b> [insert date]</p>
+    </div>
 
-Purchase product ID, purchase status (success/failure)
+    <div class="footer">
+        <b>Developer:</b> Copiasoft  
+        <br/>
+        <b>Contact:</b> copiasoft21@gmail.com
+    </div>
 
-Purchase tokens and order identifiers provided by Google Play Billing
-→ We do not receive or store credit card numbers or any sensitive payment information.
-
-3) Device & Log Information (Non-identifiable)
-
-Device model, OS version, App version
-
-Country/language settings
-
-Crash logs and performance data
-
-Advertising Identifier (ADID) for ads personalization or measurement (if allowed by the user/device settings)
-
-2. How We Use the Information
-
-We use the collected information for the following purposes:
-
-Providing and operating game services
-
-Saving user progress and managing cloud game data
-
-Processing in-app purchases and verifying purchase history
-
-Analyzing gameplay trends and improving game balance
-
-Debugging, crash analysis, and service optimization
-
-Displaying advertisements suitable for the user environment
-
-We do not sell user data to third parties.
-
-3. Third-Party Services
-
-The App uses the following third-party services, which may collect data according to their own privacy policies:
-
-• Google AdMob (Ads)
-
-Used for displaying advertisements and measuring ad performance.
-
-• PlayFab (Backend Services)
-
-Used for account management, storing game progress, and cloud data.
-
-• Unity Analytics
-
-Used for analyzing gameplay activity and improving service quality.
-
-Please review their respective privacy policies for details on their data handling practices.
-
-4. Data Retention
-
-Gameplay and purchase data are retained as long as necessary for service operation.
-
-When a user requests deletion of their game data, the data will be deleted unless retention is required by law.
-
-Crash logs and analytics data may be kept temporarily for troubleshooting and performance improvement.
-
-5. Data Deletion & User Requests
-
-Users may request deletion of their game data or withdrawal of consent at any time.
-
-To request deletion, please contact us at:
-
-📧 copiasoft21@gmail.com
-
-Please include user information such as Player ID or nickname so we can verify and process your request.
-We will delete the requested data within a reasonable period and notify you of the result.
-
-6. Children’s Privacy
-
-The App is not intended for children under the age of 14, and we do not knowingly collect personal data from children.
-If we learn that a child’s data has been collected, we will delete it immediately.
-
-7. Security Measures
-
-We take reasonable steps to protect user data from unauthorized access, alteration, or destruction.
-However, no internet service can guarantee complete security.
-
-8. Changes to This Privacy Policy
-
-We may update this Privacy Policy from time to time.
-If significant changes occur, we will notify users through the App or via an updated notice on this page.
-
-First Published: [insert date]
-
-Last Updated: [insert date]
-
-9. Contact Information
-
-For questions or concerns about this Privacy Policy:
-
-Developer: Copiasoft
-Email: copiasoft21@gmail.com
+</body>
+</html>
