--- a/privacy-breakwall.html
+++ b/privacy-breakwall.html
@@ -129,7 +129,7 @@
         <p>
             The policy may be updated due to legal or service changes. Updates will be posted on this page.
         </p>
-        <p><b>Last Updated:</b> [insert date]</p>
+        <p><b>Last Updated:</b> [2025-12-07]</p>
     </div>
 
     <div class="footer">
